# music-monitor

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DOCKER_TEST.md  Dockerfile  LICENSE  README.md  WECHAT_TEST_GUIDE.md  _music-monitor_logs.txt  alembic.ini  analyze_library.py  api.md  check_api_debug.py  check_artist_count.py  check_config.py  check_db_quality.py  check_db_song.py  check_paths_debug.py  check_problem_songs.py  check_song_debug.py  check_song_status.py  check_songs.py  compare_songs.py  config.example.yaml  config.yaml.bak  database_cleanup.py  debug_aggregator.py  debug_artist_4.py  debug_db.py  debug_flac_parsing.py  debug_healer.py  debug_output.txt  debug_probe.py  debug_scan_results.txt  debug_woyo.py  debug_woyo.txt  docker-compose.test.yml  docker-compose.yml  fastapi_skills.txt  (+50 more)
alembic/: env.py
app/: exceptions.py  pagination.py  schemas.py
config/: config.yaml.bak  config_manager.py  config_manager_correct.py  service_config.py
core/: audio_downloader.py  cleanup.py  config.py  config_manager.py  config_migration.py  database.py  event_bus.py  logger.py  plugins.py  scheduler.py  security.py  websocket.py  wechat.py
docs/: faq.md
domain/: models.py
logs/: application.log.2026-01-20  application.log.2026-01-21  application.log.2026-01-22  application.log.2026-01-23  application.log.2026-01-26  application.log.2026-01-27  application.log.2026-01-29  application.log.2026-01-30  application.log.2026-02-04  application.log.2026-02-05  application.log.2026-02-06  application.log.2026-02-10
migrations/: create_metadata_tables.py
(+340 files in other folders)
